<resources>
    <string name="app_name">Glowapp</string>
    <string name="glowapp">Have Fun while you learn :)</string>
    <string name="select_method">Choose</string>
    <string name="realtime">Camera</string>
    <string name="predict">Predict</string>
    <string name="object_identification_system">Object Identification System</string>
    <string name="glowapp_name">GlowApp</string>
    <string name="gallery">Gallery</string>
</resources>