<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/glowapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="15dp"
        android:text="@string/glowapp_name"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:text="@string/object_identification_system"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="154dp" />


    <Button
        android:id="@+id/button_camera"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button_camera"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="80dp"
        android:text="@string/realtime"

        />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button_camera"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="80dp"
        android:text="@string/gallery" />

    <Button
        android:id="@+id/button_predict"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button_gallery"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="21dp"
        android:text="@string/predict" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="200dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="308dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="396dp" />

</RelativeLayout>